@@ -770,6 +770,13 @@ current combat opponent, gaining bonuses to both attack and damage against that 
 target.  This spell can only be cast while in combat, and is dispelled when the target \
 is dead.
 
+SPELL_DETONATEBOMBS=SPELL_DETONATE_BOMBS
+SPELL_DETONATE_BOMBS=<ABILITY>\
+Usage    : CAST "DETONATE BOMBS" [TARGET]\n\r\
+Example  : cast "detonate bombs" east\n\r\
+This spell causes any bombs set by the caster to instantly explode on \
+the nearest target.
+
 SPELL_DISENCHANT=<ABILITY>\
 Usage    : CAST DISENCHANT [TARGET NAME] \n\r\
 Example  : cast "disenchant" sword\n\r\
