@@ -541,10 +541,20 @@ Parameters : \n\r\
 Description: \n\r\
 Causes the victim to take fire damage when getting the item.
 
-SPELL_BLAST=TRAP_SPELLBLAST
-TRAP_SPELLBLAST=\
+SPELL_BLAST=BOMB_SPELLBLAST
+SPELL_BOMB=BOMB_SPELLBLAST
+BOMB_SPELL_BOMB=BOMB_SPELLBLAST
+BOMB_SPELLBLAST=\
 Trap       : Spell Blast\n\r\
 Targets    : Doors and Containers\n\r\
+Parameters : The name of the spell\n\r\
+Description: \n\r\
+Causes the victim to be struck with a spell.
+
+SPELL_BOMB=TRAP_SPELLBOMB
+TRAP_SPELLBOMB=\
+Trap       : Spell Bomb\n\r\
+Targets    : Scrolls\n\r\
 Parameters : The name of the spell\n\r\
 Description: \n\r\
 Causes the victim to be struck with a spell.
