@@ -17,6 +17,8 @@
  15. DESTROY command supports MQL with DESTROY DELETE: from ...
  16. Clan Government role 'CLAN_MOTD' changed to 'READ_MOTD'. 'CREATE_MOTD' added.
  17. New Zappermask: +-CLANLEVEL, for filtering a members clan's level
+ 18. New Bombs: Spell Bomb
+ 19. New Spell: Spell_DetonateBombs
 
 # Build 5.10.0 Release 9/23/2022
   1. New Scriptable functions: ROOMPC and AREAPC
